--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
     <h1 class="title">Discover hidden places in the world around you</h1>
 
     <a class="link" href="">Download Excursion (Coming soon!)</a>
+
+    <h2 class="title-2">Your personal travel guide</h2>
+
+    <p class="text">Excursion remembers places you like, and recommends new points of interest around you</p>
+
+    <p class="images"><img src="resources/images/camp.jpg" alt="image of a night camp"></p>
+
+    <p class="images"><img src="resources/images/phone.png" alt="logo of a smarthphone"></p>
     
 </body>
 </html>
