--- a/index.html
+++ b/index.html
@@ -21,5 +21,12 @@
 
     <p class="images"><img src="resources/images/phone.png" alt="logo of a smarthphone"></p>
     
+    <p class="title-2">Coming Soon for iPhone and Android</p>
+
+    <a class="link" href="">Download Excursion (Coming soon!)</a>
+
+    <footer>
+        <p class="text-footer">&copy; Excursion</p>
+    </footer>
 </body>
 </html>
