--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
     <a class="link" href="">Download Excursion (Coming soon!)</a>
 
+    <video class="excursion-video" autoplay="autoplay" loop="loop" src="resources/videos/excursion.mp4"></video>
+
     <h2 class="title-2">Your personal travel guide</h2>
 
     <p class="text">Excursion remembers places you like, and recommends new points of interest around you</p>
