--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <h2 class="title-2">Your personal travel guide</h2>
 
-    <p class="text">Excursion remembers places you like, and recommends new points of interest around you</p>
+    <p class="text">Excursion remembers places you like, and recommends new points of interest around you.</p>
 
     <p class="images"><img src="resources/images/camp.jpg" alt="image of a night camp"></p>
 
