--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <a class="link" href="">Download Excursion (Coming soon!)</a>
 
-    <video class="excursion-video" autoplay="autoplay" loop="loop" src="resources/videos/excursion.mp4"></video>
+    <video class="excursion-video" autoplay muted loop src="resources/videos/excursion.mp4"></video>
 
     <h2 class="title-2">Your personal travel guide</h2>
 
