added info to the footer of index.html

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
     <footer>
         <p class="text-footer">&copy; Excursion</p>
+        <p class="text-footer">Made by Ignacio</p>
     </footer>
     
 </body>
